--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 server.port=9999
 spring.cloud.stream.bindings.input=reservations
-message=Hello Nameless department store!!!!!
+message=Hello Nameless department store!!!###
 testmessage=testtest
