--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,3 +1,3 @@
 server.port=${PORT:8000}
 spring.cloud.stream.bindings.input=reservations
-message=Hello Nameless department store!!!!!
+message=Name defined as 1
