--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,3 +1,3 @@
 spring.cloud.stream.bindings.input=reservations
-message=Name defined for reservation-service
+message=Name defined for reservation-service1
 eureka.instance.status-page-url-path=/reservations/3
